<resources>
    <string name="app_name">Clever Little Monkey</string>
    <string name="action_settings">Settings</string>
    <string name="crocodile">Crocodile</string>
    <string name="howtoplay">How To Play</string>
    <string name="stop_button">Stop</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="receptacle">receptable</string>
    <string name="title_activity_tenth_phonic_drill">TenthPhonicDrillActivity</string>

    <string name="zero_numeric">0</string>
    <string name="percentage_sign">%</string>

    <string name="colour_beads">Colour Beads</string>

    <string name="play">Play</string>
    <string name="read">Read</string>
    <string name="Chapter">Chapter</string>

    <string name="Bookmark">Bookmark</string>
    <string name="Pause_Button">Pause Button</string>
    <string name="Stop_Button">Stop Button</string>

    <string name="Left_Letter">Left Letter</string>
    <string name="Right_Letter">Right Letter</string>
    <string name="Left_Box">Left Box</string>
    <string name="Right_Box">Right Box</string>
    <string name="Left_Number">Left Number</string>
    <string name="Right_Number">Right Number</string>

    <string name="Image_to_Match">Image to Match</string>

    <string name="Background_Image">Background Image</string>

    <string name="Clever_Little_Monkey">Clever Little Monkey</string>
    <string name="Damas_Toy">Dama’s Toy</string>

    <string name="Letter">Letter</string>
    <string name="Image_Representing_Letter">Image Representing Letter</string>

    <string name="Select_Left_Image">Select Left Image</string>
    <string name="Select_Right_Image">Select Right Image</string>

    <string name="App_Logo">App Logo</string>
    <string name="Read_Button">Read Button</string>
    <string name="Continue_Button">Continue Button</string>
    <string name="Stars_Button">Stars Button</string>
    <string name="Help_Button">Help Button</string>
    <string name="Tutorial_Button">Tutorial Button</string>
    <string name="Volume_Button">Volume Button</string>
    <string name="Chapter_1">Chapter 1</string>
    <string name="Chapter_Select">Chapter Select</string>

    <string name="Singing_Monkey">Singing Monkey</string>
    <string name="Volume">Volume</string>
    <string name="Percentage">Percentage</string>
    <string name="zero_percent">0 %</string>

    <string name="pattern">Pattern</string>

    <string name="missing_shape">Missing Shape</string>
    <string name="shape_01">Shape 01</string>
    <string name="shape_02">Shape 02</string>
    <string name="shape_03">Shape 03</string>
    <string name="shape_04">Shape 04</string>
    <string name="shape_05">Shape 05</string>
    <string name="shape_06">Shape 06</string>
    <string name="shape_07">Shape 07</string>
    <string name="shape_08">Shape 08</string>
    <string name="shape_09">Shape 09</string>
    <string name="shape_10">Shape 10</string>

    <string name="missing_letter">Missing Letter</string>
    <string name="first_letter">First Letter</string>
    <string name="second_letter">Second Letter</string>
    <string name="third_letter">Third Letter</string>
    <string name="fourth_letter">Fourth Letter</string>
    <string name="fifth_letter">Fifth Letter</string>
    <string name="sixth_letter">Sixth Letter</string>
    <string name="seventh_letter">Seventh Letter</string>
    <string name="eighth_letter">Eighth Letter</string>
    <string name="ninth_letter">Ninth Letter</string>
    <string name="tenth_letter">Tenth Letter</string>

    <string name="missing_number">Missing Number</string>
    <string name="first_number">First Number</string>
    <string name="second_number">Second Number</string>
    <string name="third_number">Third Number</string>
    <string name="fourth_number">Fourth Number</string>
    <string name="fifth_number">Fifth Number</string>
    <string name="sixth_number">Sixth Number</string>
    <string name="seventh_number">Seventh Number</string>
    <string name="eighth_number">Eighth Number</string>
    <string name="ninth_number">Ninth Number</string>
    <string name="tenth_number">Tenth Number</string>

    <string name="flash_word">Flash Word</string>
    <string name="first_word">First Word</string>
    <string name="second_word">Second Word</string>
    <string name="third_word">Third Word</string>
    <string name="fourth_word">Fourth Word</string>
    <string name="fifth_word">Fifth Word</string>
    <string name="sixth_word">Sixth Word</string>
    <string name="seventh_word">Seventh Word</string>
    <string name="eighth_word">Eighth Word</string>
    <string name="ninth_word">Ninth Word</string>
    <string name="tenth_word">Tenth Word</string>

    <string name="Image_01">Image 01</string>
    <string name="Image_02">Image 02</string>
    <string name="Image_03">Image 03</string>
    <string name="Image_04">Image 04</string>
    <string name="Image_05">Image 05</string>
    <string name="Image_06">Image 06</string>
    <string name="Image_07">Image 07</string>
    <string name="Image_08">Image 08</string>
    <string name="Image_09">Image 09</string>
    <string name="Image_10">Image 10</string>

    <string name="Shape_01">Shape 1</string>
    <string name="Shape_02">Shape 2</string>

    <string name="Star_01">Star 01</string>
    <string name="Star_02">Star 02</string>
    <string name="Star_03">Star 03</string>
    <string name="Star_04">Star 04</string>
    <string name="Star_05">Star 05</string>
    <string name="Star_06">Star 06</string>
    <string name="Star_07">Star 07</string>
    <string name="Star_08">Star 08</string>
    <string name="Star_09">Star 09</string>
    <string name="Star_10">Star 10</string>
    <string name="Star_11">Star 11</string>
    <string name="Star_12">Star 12</string>
    <string name="Star_13">Star 13</string>
    <string name="Star_14">Star 14</string>
    <string name="Star_15">Star 15</string>
    <string name="Star_16">Star 16</string>
    <string name="Star_17">Star 17</string>
    <string name="Star_18">Star 18</string>
    <string name="Star_19">Star 19</string>
    <string name="Star_20">Star 20</string>

    <string name="Monkey">Monkey</string>

    <string name="Monkey_01">Monkey 01</string>
    <string name="Monkey_02">Monkey 02</string>
    <string name="Monkey_03">Monkey 03</string>
    <string name="Monkey_04">Monkey 04</string>
    <string name="Monkey_05">Monkey 05</string>
    <string name="Monkey_06">Monkey 06</string>
    <string name="Monkey_07">Monkey 07</string>
    <string name="Monkey_08">Monkey 08</string>
    <string name="Monkey_09">Monkey 09</string>
    <string name="Monkey_10">Monkey 10</string>
    <string name="Monkey_11">Monkey 11</string>
    <string name="Monkey_12">Monkey 12</string>
    <string name="Monkey_13">Monkey 13</string>
    <string name="Monkey_14">Monkey 14</string>
    <string name="Monkey_15">Monkey 15</string>
    <string name="Monkey_16">Monkey 16</string>
    <string name="Monkey_17">Monkey 17</string>
    <string name="Monkey_18">Monkey 18</string>
    <string name="Monkey_19">Monkey 19</string>
    <string name="Monkey_20">Monkey 20</string>

    <string name="Damas_Item_01">Dama\'s Item 01</string>
    <string name="Damas_Item_02">Dama\'s Item 02</string>
    <string name="Damas_Item_03">Dama\'s Item 03</string>
    <string name="Damas_Item_04">Dama\'s Item 04</string>
    <string name="Damas_Item_05">Dama\'s Item 05</string>
    <string name="Damas_Item_06">Dama\'s Item 06</string>
    <string name="Damas_Item_07">Dama\'s Item 07</string>
    <string name="Damas_Item_08">Dama\'s Item 08</string>
    <string name="Damas_Item_09">Dama\'s Item 09</string>
    <string name="Damas_Item_10">Dama\'s Item 10</string>
    <string name="Damas_Item_11">Dama\'s Item 11</string>
    <string name="Damas_Item_12">Dama\'s Item 12</string>
    <string name="Damas_Item_13">Dama\'s Item 13</string>
    <string name="Damas_Item_14">Dama\'s Item 14</string>
    <string name="Damas_Item_15">Dama\'s Item 15</string>

    <string name="Monkeys_Item_01">Monkey\'s Item 01</string>
    <string name="Monkeys_Item_02">Monkey\'s Item 02</string>
    <string name="Monkeys_Item_03">Monkey\'s Item 03</string>
    <string name="Monkeys_Item_04">Monkey\'s Item 04</string>
    <string name="Monkeys_Item_05">Monkey\'s Item 05</string>
    <string name="Monkeys_Item_06">Monkey\'s Item 06</string>
    <string name="Monkeys_Item_07">Monkey\'s Item 07</string>
    <string name="Monkeys_Item_08">Monkey\'s Item 08</string>
    <string name="Monkeys_Item_09">Monkey\'s Item 09</string>
    <string name="Monkeys_Item_10">Monkey\'s Item 10</string>
    <string name="Monkeys_Item_11">Monkey\'s Item 11</string>
    <string name="Monkeys_Item_12">Monkey\'s Item 12</string>
    <string name="Monkeys_Item_13">Monkey\'s Item 13</string>
    <string name="Monkeys_Item_14">Monkey\'s Item 14</string>
    <string name="Monkeys_Item_15">Monkey\'s Item 15</string>


    <string name="plus_sign">+</string>
    <string name="minus_sign">-</string>
    <string name="equals_sign">=</string>
    <string name="Answer">Answer</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>