<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_volume_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_blue"
    tools:context="classact.com.clever_little_monkey.activity.menu.VolumeMenu">

    <!-- Base Guidelines START -->

    <android.support.constraint.Guideline
        android:id="@+id/guideline_mid_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"/>

    <android.support.constraint.Guideline
        android:id="@+id/guideline_mid_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>

    <!-- Base Guidelines END -->

    <!-- Background START -->

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:background="@android:color/transparent"
        android:contentDescription="@string/Background_Image"/>

    <!-- Background END -->

    <!-- Volume Menu Content START -->

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/guideline_mid_horizontal"
        app:layout_constraintLeft_toLeftOf="@+id/guideline_mid_vertical"
        app:layout_constraintRight_toLeftOf="@+id/guideline_mid_vertical"
        app:layout_constraintBottom_toTopOf="@+id/guideline_mid_horizontal">

        <!-- Volume Menu Content Guidelines START -->

        <android.support.constraint.Guideline
            android:id="@+id/menu_guideline_mid_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"/>

        <!-- Volume Menu Content Guidelines END -->

        <!-- Heading START -->

        <ImageView
            android:id="@+id/heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/Volume"
            app:layout_constraintLeft_toLeftOf="@id/menu_guideline_mid_vertical"
            app:layout_constraintRight_toRightOf="@id/menu_guideline_mid_vertical"
            android:background="@android:color/transparent"/>

        <!-- Heading END -->

        <!-- Volume Controls START -->

        <!-- SeekBar START -->

        <SeekBar
            android:id="@+id/seek_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="200dp"
            android:layout_marginEnd="200dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:thumbOffset="0dp"
            android:max="15"
            android:thumb="@drawable/star_seekbar_thumb"
            android:layout_marginTop="200dp"
            app:layout_constraintTop_toTopOf="@+id/heading"
            app:layout_constraintLeft_toLeftOf="@+id/menu_guideline_mid_vertical"
            app:layout_constraintRight_toLeftOf="@+id/menu_guideline_mid_vertical" />

        <!-- SeekBar END -->

        <!-- Volume Percentage START -->

        <TextView
            android:id="@+id/volume"
            android:text="@string/zero_numeric"
            android:textSize="72sp"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="130dp"
            app:layout_constraintTop_toTopOf="@+id/seek_bar"
            app:layout_constraintRight_toLeftOf="@+id/menu_guideline_mid_vertical"
            app:layout_constraintLeft_toLeftOf="@+id/menu_guideline_mid_vertical" />

        <TextView
            android:id="@+id/percentage_sign"
            android:text="@string/percentage_sign"
            android:textSize="72sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/volume"
            app:layout_constraintLeft_toRightOf="@+id/volume"
            app:layout_constraintBottom_toBottomOf="@+id/volume"/>

        <!-- Volume Percentage END -->

        <!-- Volume Controls END -->

    </android.support.constraint.ConstraintLayout>

    <!-- Volume Menu Content END -->

</android.support.constraint.ConstraintLayout>